# clr-desc

./: README.md  pyproject.toml
src/clr-desc/: join.py  lowercase.py  split.py  uppercase.py
