[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clr-desc"
version = "0.0.1"
authors = [
  {name="Ron Jean-Francois", email="jeanfrancoisron@gmail.com"},
]
description = "Useful scripts for data entry, data cleansing, etc."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ronthetech/clr-desc"
Issues = "https://github.com/ronthetech/clr-desc/issues"